--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,8 @@
 .header-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 17%;
   width: 100%;
 }
@@ -9,6 +13,9 @@
 }
 
 .header-mid {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
   font-size: 1em;
 }
 
