--- a/src/components/CategoryPage/CategoryPage.css
+++ b/src/components/CategoryPage/CategoryPage.css
@@ -1,9 +1,10 @@
 .category-page-container {
   height: 82vh;
-  width: 100%;
+  width: 100vw;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   overflow: auto;
   align-items: center;
   text-align: center;
+  justify-content: center;
 }
