--- a/src/components/CategoryCard/CategoryCard.css
+++ b/src/components/CategoryCard/CategoryCard.css
@@ -1,19 +1,22 @@
 .cat-card-link {
-  height: 8%;
-  width: 20%;
-  border: 1px solid black ;
+  background-image: url('/public/cones.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 20%;
+  width: 25%;
+  border: 1px solid lightcoral;
+  border-radius: 10ex;
   text-align: center;
   margin: 5px;
-  background-color: lightgray;
   text-decoration: none;
   color: black;
   font-weight: bolder;
+  font-size: 3em;
 }
 
 .cat-card-link:hover {
   text-decoration: none;
-  height: 11%;
-  width: 25%;
-  background-color: lightslategrey;
+  height: 25%;
+  width: 30%;
   color: black;
 }
