--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,18 +1,41 @@
 .header-container {
+  height: 33%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  padding-left: 40px;
+}
+
+.logo-container, .logo-container-2 {
+  width: 19%;
+  border-left: 5px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url('/public/rainbowicecream.png');
+}
+
+.logo-container-2 {
+  margin-top: 2px;
+  /* width: 17%; */
+  background-image: url('/public/backwards.png');
+}
+
+.header-text-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 33%;
-  width: 100%;
+  height: 100%;
+  width: 60%;
   margin: 0;
 }
 
 .whats-the-scoop {
-  font-size: 2.5em;
-  color: black;
-  font-weight: lighter;
-  height: 40%;
+  font-size: 3.6em;
+  color: #F5BCBE;
+  font-weight: bolder;
+  height: 60%;
 }
 
 .header-mid {
@@ -31,4 +54,5 @@
 .todays-news{
   font-size: 1.33em;
   height: 15%;
+  color: #53B77D
 }
