--- a/src/components/CategoryPage/CategoryPage.css
+++ b/src/components/CategoryPage/CategoryPage.css
@@ -1,10 +1,9 @@
 .category-page-container {
   height: 82vh;
   width: 100vw;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   overflow: auto;
-  align-items: center;
   text-align: center;
-  justify-content: center;
+  padding-left: 2%;
 }
