--- a/src/components/CategoryCard/CategoryCard.css
+++ b/src/components/CategoryCard/CategoryCard.css
@@ -9,7 +9,8 @@
   text-align: center;
   margin: 5px;
   text-decoration: none;
-  color: black;
+  color: white;
+  text-shadow: 2px 2px 3px black;
   font-weight: bolder;
   font-size: 3em;
 }
@@ -18,5 +19,5 @@
   text-decoration: none;
   height: 25%;
   width: 30%;
-  color: black;
+  color: #DE736E;
 }
