--- a/src/components/ArticleCard/ArticleCard.css
+++ b/src/components/ArticleCard/ArticleCard.css
@@ -1,24 +1,51 @@
 .article-card-link {
+background-image: url('/public/iceCream.png');
+background-size: 100% 100%;
+background-repeat: no-repeat;
+border-radius: 30%;
 width: 80%;
-height: 15%;
+height: 350px;
 Border: 1px solid indigo;
 margin: 5px;
 text-decoration: none;
+text-align: center;
 color: black;
-background-color: lightgray;
+opacity: 75%;
+padding: 1%;
+padding-top: 4%;
+display: flex;
+flex-direction: column;
+justify-content: space-evenly;
+align-items: center;
 }
 
 .article-card-link:hover {
   text-decoration: none;
-  height: 18%;
-  width: 85%;
-  background-color: lightsteelblue;
+  height: 380px;
+  width: 90%;
+  background-size: cover;
+  opacity: 100%;
 }
 
 .story-title {
-  font-size: 1.25em;
+  width: 75%;
+  text-align: center;
+  font-size: 1.2em;
+  opacity: 100%;
+  margin: 0%;
+  background-color:#FCE1E4;
+  border-radius: 30px;
 }
 
+.byline {
+  background-color: #DDEDEA;
+  border-radius: 30px;
+}
 .abstract-container {
+  width: 80%;
   overflow: auto;
+  opacity: 100%;
+  background-color: #E7DFF5;
+  border-radius: 30px;
+  margin-bottom: 2%;
 }
