--- a/src/components/CategoryCard/CategoryCard.css
+++ b/src/components/CategoryCard/CategoryCard.css
@@ -4,15 +4,13 @@
   background-repeat: no-repeat;
   height: 20%;
   width: 25%;
-  border: 1px solid lightcoral;
+  border: 3px solid lightcoral;
   border-radius: 10ex;
   text-align: center;
   margin: 5px;
   text-decoration: none;
   color: white;
   text-shadow: 2px 2px 3px black;
-  font-weight: bolder;
-  font-size: 3em;
 }
 
 .cat-card-link:hover {
@@ -20,4 +18,28 @@
   height: 25%;
   width: 30%;
   color: #DE736E;
+}
+
+.category-text {
+  font-weight: bolder;
+  font-size: 2.5em;
+}
+
+@media screen and (max-width: 1086px) {
+  .category-text {
+    font-size: 2em;
+  }
+}
+
+@media screen and (max-width: 886px) {
+  .category-text {
+    font-size: 1.5em;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .category-text {
+    margin-top: 30%;
+    font-size: 1em;
+  }
 }
