--- a/src/components/CategoryPage/CategoryPage.css
+++ b/src/components/CategoryPage/CategoryPage.css
@@ -7,3 +7,17 @@
   text-align: center;
   padding-left: 2%;
 }
+
+@media screen and (max-width: 886px) {
+  .category-page-container {
+    grid-template-columns: repeat(2, 1fr);
+    padding-left: 1%;
+  }
+}
+
+@media screen and (max-width: 586px) {
+  .category-page-container {
+    grid-template-columns: repeat(1, 1fr);
+    padding-left: 1.5%;
+  }
+}
